5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1575_1332.log
== TEST (2019-03-12 23:36:03) 
-- CODE:
aresta = (a**2)
area = 3×a**2×(3)**2/2
 
print(round(area, 5))
-- ERROR:
File "XXXX", line 2
    area = 3×a**2×(3)**2/2
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:08:08) 
-- CODE:
aresta = 5
area = (3/2)*(a**2)*(3**0.5)
 
print(round(area, 5 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(a**2)*(3**0.5)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:08:30) 
-- CODE:
aresta = 5
area = (3/2)*(a**2)*(3**0.5)/2
 
print(round(area, 5 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(a**2)*(3**0.5)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:10:35) 
-- CODE:
aresta = 5
area = (3/2)*(aresta**2)*(3**0.5)
 
print(round(area, 4 ))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:10:40) 
-- CODE:
aresta = 5
area = (3/2)*(aresta**2)*(3**0.5)
 
print(round(area, 4 ))
-- EXECUTION TIME:
0.180805
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
